# lshw

./: CMakeLists.txt
